tests/fixtures/compile_errors/return_lt_mixed_types.fe
contract Foo:
    pub def bar(x: u128, y: u256) -> bool:
        return x < y
